# MDK_Firmware_Bar

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json  main.cpp
.cache/clangd/index/: CLI11.hpp.AFBCB9DA90624096.idx  main.cpp.DF4ADD31CAAA8EFF.idx  tinyxml2.cpp.F674A18C218802FD.idx  tinyxml2.h.839754C6B4BD8CB3.idx
